Updated look, filled out South Horn section a bit

--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -2,7 +2,7 @@
 title: "Forked Tower: Blood"
 description: "Forked Tower: Blood Resources"
 tableOfContents:
-  minHeadingLevel: 3
+  minHeadingLevel: 2
 ---
 
 import { Aside } from '@astrojs/starlight/components';
@@ -14,14 +14,68 @@ import Footer from '@components/Footer.astro'
 Forked Tower: Blood is the capstone raid released in 7.25 alongside Occult Crescent: South Horn. It features many difficult encounters designed for a minimum of 24 players to participate in.
 It features limited raising in both methods and a lives sytems along with more gimmicky mechanics that require the usage of specific Phantom Jobs such as Geomancer, Time Mage, and Thief.
 
+### Required Phantom Jobs
+The list of required phantom jobs is really short. You just need a two time mages, thieves, geomancers, and a single berserker for specific sections. However, there are other jobs that aren't "required" but will definitely make
+your experience magentitudes easier. In no particular order the following phantom jobs are strongly encouraged to be brought.
+- **Phantom Chemist**:
+This is your only method of raising outside of Healer Limit Break 3. Progression groups are reccomended to bring multiple of these.
+
+- **Phantom Knight**:
+Provides a 10% damage mitigation for 30 minutes when using Pray near the knowledge crystal scattered throughout Forked Tower. Knights are also used to tank bosses, adds, and sometimes clear out
+traps due to their Pledge ability. Noteably knights are great at taking the Marble Dragon "Dread Deluge" buster and the Magitaur Cannister's "Arcane Recoil".
+
+- **Phantom Time Mage**:
+Absolutely required job needed for dispelling specific adds at various points in Forked Tower. Can also slow a large majority of adds throughout Forked Tower.
+
+- **Phantom Geomancer**:
+A required phantom job to complete Forked Tower: Blood.
+
+### Limited Raising and Lives
+While in Forked Tower: Blood you a Resurrection Restricted debuff will be placed on participants. This debuff starts at three stacks and act as your "lives" while inside the Forked Tower.
+After you die and then accept a raise, you will lose one stack of debuff or life (for simplicity, I will call them just lifes/lives from now on). When reaching 1 life, dying, and accepting another raise - your 
+Ressurection Restricted will turn into a Ressurection Denied.
+
+From this point onwards, your next death is premanent. No method of raising can revive you and you are required to return out to Base Camp. Thus
+causing you to level down and grind back to KL20. Don't worry though, getting back to KL20 is just 2 FATEs and 1 CE away (or gold farming a little bit).
+
+With that, the methods in which you can be raised are also extremely limited. So far, there are only two methods in which you can be raised:
+1. Phantom Chemist with the Raise ability (unlocked at level 3)
+2. Healer Limit Break 3.
+
+Both methods will consume 1 life and the healer limit break 3 *does not* circumvent the resurrection denied buff.
+
+<br></br>
+<hr></hr>
+
+## Preparing for Forked Tower: Blood
+Getting ready to enter Forked Tower: Blood requires you to complete a list of objectives before even considering entering the Forked Tower.
+1. Complete the "Past and Crescent" quest just past the point of winning in the "Calamity Bound" Critical Engagement.
+2. Reach Knowledge Level 20
+3. Obtain a Sanguine Cipher (purchased with either Silver or Gold pieces) from the Expedition Antiquarian
+4. Fully level (or "master") a few different Phantom Jobs to fully unlock their kits and gain a few stacks of Phantom Mastery.
+5. (Optional) Obtain a few pieces of Arcanaut's gear for your preferred role(s).
+
+For a list of phantom jobs to focus, please consult the image below.
+<Image
+    src="/ft/pjobFocusing.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="Demon Tablet Cheatsheet"
+    onclick="window.open('/ft/pjobFocusing.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
 <br></br>
 <hr></hr>
 
 ## Encounters/Bosses
-All guides linked below will feature the same strats, just with a different presentation and/or slightly different explainations. Both will result in extremely similar outcomes.
+All guides linked below will feature the same strats, just with a different presentation and/or slightly different explainations. Both will result in the same outcomes when resolved.
 These strats are all used by the featured N.A. Discords linked [here](/others/discords)
 
-### General Encounter Resources
+## General Encounter Resources
 - <a href="https://docs.google.com/spreadsheets/d/1Nb4pnAjHg06r7zR3bJEUaZ7gwcX4nue0YIuybVdvpVk" target="_blank">**Fight Timelines**</a>
 - <a href="https://docs.google.com/spreadsheets/d/1UlbGYBrhVn4L1isfcVACOqLlYclHeP9Zazj6PfM3Y8U" target="_blank">**Tank Mitigation**</a> (includes pKnight, Non-pKnight, Berserker)
 - <a href="https://docs.google.com/spreadsheets/d/1wHcHBrO41f7BNaJmRCqxGwdv9bldhb-4m2YfcVWWzbM" target="_blank">**Healer Mitigation**</a> (include pBard timings)
@@ -213,7 +267,6 @@ If you stand to close to any of these things, you risk dying. Do not waste your 
 <hr></hr>
 
 ### Magitaur
-- <a href="https://raidplan.io/plan/aX0NBDNs6BuYJ2pg" target="_blank">**Raidplan**</a>
 - <a href="https://docs.google.com/presentation/d/15Mbb5oVXmfGVErUI1gCce3QZ-AjPNX6D7q1PJ5V4hB8/present?slide=id.p" target="_blank">**Google Slides**</a>
 - <a href="https://mathranger101.itch.io/magitaur-sim" target="_blank">**Magitaur Mechanic Simulator**</a> (browser based game)
 - **Pocket Guides**
@@ -231,14 +284,6 @@ If you stand to close to any of these things, you risk dying. Do not waste your 
     onclick="window.open('/ft/magitaur_cheatsheet.png','_blank')"
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
-
-:::note[Alternative Sage's Staff]
-Some hosts may choose to do an alternative version of Sage's Staff where the party either all stacks directly under the boss or at a select marker. Both of those and normal staffs
-are considered valid solutions. Hosts can and should annouce to the party which one they will be doing. 
-
-As always, if you're confused... **ask questions!**
-- <a href="https://raidplan.io/plan/jygLdwnZVWnJNRGQ" target="_blank">**Spiral Staff (Specific Marker) Raidplan**</a>
-:::
 
 <details>
 <summary>Fight PoVs</summary>
