--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -12,8 +12,7 @@ import { Image } from 'astro:assets';
 import Footer from '@components/Footer.astro'
 
 Occult Crescent was released in 7.25 is Dawntrail's featured Field Operation similar to the likes of Eureka and Bozja. You will explore the island known as Shades' Triangle which takes inspiration from
-the legend of the real-world Bermueda Triangle. Occult Crescent draws parallels from the myths that many ships and explorers alike seem to go missing out of thin air but with the added notion of 
-treasure and glory to be earned from conquering the Triangle.
+the legend of the real-world Bermueda Triangle.
 
 Currently, to enter Occult Crescent you must have completed the questline start with "One Last Hurrah" (starts in Tuliyollal (X:17.1, Y:11.8)) up to Umfamiliar Territory to unlock the South Horn. You must also be
 on a combat job and have a minimum item level of 690. Occult Crescent does sync item levels to 700 as a note! So any materia on gear above i700 will be completely disabled. This is
@@ -64,91 +63,6 @@ improving the higher your chain goes. Currently, to chain mobs you must kill mob
 | 5-6           | 6-7 levels above |
 | 7-8           | 7-8 levels above |
 </div>
-
-<br></br>
-<hr></hr>
-## Currencies in Occult Crescent
-There are currently 3 different types of currency that are all earned in (mostly) unique ways and change be exchanged for mounts, glamours, gear progression, ciphers for forked tower, or
-other resources to aide you in taking on the Crescent. There is silver which is only from FATEs, CEs, and Bunnys/Pots. Gold which can only be earned from chaining mobs or Bunnys/Pots. Then Sanguinite which is
-the Forked Tower: Blood exclusive currency (similar to Eurekan Fragments from Baldesian).
-
-### Enlightenment Silver Pieces
-Enlightenment Silver Pieces are *only* earned by doing FATEs, CEs, and opening pot/bunny coffers in the South Horn. 
-<div style="display:flex; justify-content: center;">
-| Activity | Amount Earned |
-| :---: | :---: |
-| **FATEs** | 30 |
-| **Crit. Engagements** | 200 |
-| **Pot Chests** | 100/300/1,000|
-| **Bunny Chests** | 1,000 |
-</div>
-
-Silver pieces are primarily used for both purchasing and augmented Arcanaut's gear.
-You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
-<details>
-<summary>Noteable Silver Items to Buy</summary>
-<div style="display:flex; justify-content: center;">
-| Item | Cost | Use |
-| :---: | :---: | :--: |
-| **South Horn Riding Map** | 3,000 | Increases mount speed, makes travelling and getting to FATEs much easier. |
-| **Ph. Time Mage** | 1,000 | Slows/dispels mobs, hastens yourself or allies. Required for Forked Tower. | 
-| **Ph. Cannoneer** | 1,000 | Strong AoE damage. Has stronger/longer trick attack. Perfect for gold farming! | 
-| **Ph. Chemist** | 1,000 | Healing, MP refills, and the only way to raise people in Forked Tower. | 
-| **Aetherspun Silver** | 1,200 | Used in augmented Arcanaut's gear from base to the +1 variant. | 
-| **Sanguine Ciphers** |  600 | Costs 600 but you get 800 on each FT clear. Can pay itself back in reclears. |
-| **Ancient Airship** | 5,000 | 4-seater mount. Definitely save this for last! | 
-</div>
-</details>
-
-### Enlightenment Gold Pieces
-Enlightenment Gold Pieces are *only* earned by chaining mobs or opening pot/bunny coffers in the South Horn.
-<div style="display:flex; justify-content: center;">
-| Activity | Amount Earned |
-| :---: | :---: |
-| **Mobs** | Varied, higher level = more gold |
-| **Crit. Engagements** | 200 |
-| **Pot Chests** | 160/480/1,600 |
-| **Bunny Chests** | 1,600|
-</div>
-:::note[Gold Increase from Chaining]
-When above a chain of 20, any gold earned will be doubled! So keep that chain going for as long as possible!
-:::
-
-Gold pieces are primarily used for purcahse **Aetherial Fixatives** for augmenting Arcanaut's gear.
-You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
-<details>
-<summary>Noteable Gold Items to Buy</summary>
-<div style="display:flex; justify-content: center;">
-| Item | Cost | Use |
-| :---: | :---: | :--: |
-| **Ph. Samurai** |  1,000 | Strongest DPS option in Occult Crescent right now. |
-| **Ph. Geomancer** | 1,000 | Damage Buff/Healing Bells. Can Suspend self/party. Required for Forked Tower | 
-| **Ph. Thief** |  1,000 | Healing, MP refills, and the only way to raise people in Forked Tower. |
-| **Aetherial Fixatives** | 3,000 | Used in augmented Arcanaut's gear from base to the +1 variant. | 
-| **Sanguine Ciphers** |  960 | Used to enter Forked Tower. Costs 960 gold but accumulates fast when farming in a dedicated group. |
-| **Coffers/Potions** | 50 | Items used by Ph. Samurais/Chemists. Alternative to spending gil if no other uses for gold. | 
-</div>
-</details>
-
-### Sanguinite
-Forked Tower: Blood exclusive currency. Earned from completing encounters and finding hidden chests throughout the tower. A max of 30 sanguinite can be potentially earned
-per clear. Sanguinite is mostly used to purchase X-Fixatives which are used in augmenting Arcanaut's gear from +1 to +2.
-
-You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
-
-<details>
-<summary>Noteable Sanguinite Items to Buy</summary>
-<div style="display:flex; justify-content: center;">
-| Item | Cost | Use |
-| :---: | :---: | :--: |
-| **X-Fixatives** | 10 | Used in augmented Arcanaut's gear from +1 to the +2 variant. | 
-| **Psamathe** | 6 | Pink-ish Dead Stars minion | 
-| **Naiad** |  6 | Purple Dead Stars minion |
-| **Deimos** |  6 | Green Dead Stars minion |
-| **Furniture** |  Varied | Housing items unique to Occult Crescent |
-| `/twirl` emote | 30 | Unique emote only found in South Horn | 
-</div>
-</details>
 
 <br></br>
 <hr></hr>
