--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -10,9 +10,140 @@ import { Icon } from '@astrojs/starlight/components';
 import { Image } from 'astro:assets';
 import Footer from '@components/Footer.astro'
 
-## Occult Crescent
-## Phantom Jobs
-## Vendors
+## South Horn
+
+<br></br>
+<hr></hr>
+## Currencies
+There are currently 3 different types of currency that are all earned in (mostly) unique ways and change be exchanged for mounts, glamours, gear progression, ciphers for Forked Tower: Blood, or
+other resources to aide you in taking on the South Horn. There is silver which is only from FATEs, CEs, and Bunnys/Pots. Gold which can only be earned from chaining mobs or Bunnys/Pots. Then Sanguinite which is
+the Forked Tower: Blood exclusive currency (similar to Eurekan Fragments from Baldesian).
+
+### Enlightenment Silver Pieces
+Enlightenment Silver Pieces are *only* earned by doing FATEs, CEs, and opening pot/bunny coffers in the South Horn. 
+<div style="display:flex; justify-content: center;">
+| Activity | Amount Earned |
+| :---: | :---: |
+| **FATEs** | 30 |
+| **Crit. Engagements** | 200 |
+| **Pot Chests** | 100/300/1,000|
+| **Bunny Chests** | 1,000 |
+</div>
+
+Silver pieces are primarily used for both purchasing and augmented Arcanaut's gear.
+You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
+<details>
+<summary>Noteable Silver Items to Buy</summary>
+<div style="display:flex; justify-content: center;">
+| Item | Cost | Use |
+| :---: | :---: | :--: |
+| **South Horn Riding Map** | 3,000 | Increases mount speed, makes travelling and getting to FATEs much easier. |
+| **Ph. Cannoneer** | 1,000 | Strong AoE damage. Has stronger/longer trick attack. Perfect for gold farming! | 
+| **Ph. Time Mage** | 1,000 | Slows/dispels mobs, hastens yourself or allies. Required for Forked Tower. | 
+| **Ph. Chemist** | 1,000 | Healing, MP refills, and the only way to raise people in Forked Tower. | 
+| **Aetherspun Silver** | 1,200 | Used in augmented Arcanaut's gear from base to the +1 variant. | 
+| **Sanguine Ciphers** |  600 | Used to enter Forked Tower: Blood. |
+| **Ancient Airship** | 5,000 | 4-seater mount. Definitely save this for last! | 
+</div>
+</details>
+
+### Enlightenment Gold Pieces
+Enlightenment Gold Pieces are *only* earned by chaining mobs or opening pot/bunny coffers in the South Horn.
+<div style="display:flex; justify-content: center;">
+| Activity | Amount Earned |
+| :---: | :---: |
+| **Mobs** | Varied, higher level = more gold |
+| **Crit. Engagements** | 200 |
+| **Pot Chests** | 160/480/1,600 |
+| **Bunny Chests** | 1,600|
+</div>
+:::note[Gold Increase from Chaining]
+When above a chain of 20, any gold earned will be doubled! So keep that chain going for as long as possible!
+:::
+
+Gold pieces are primarily used for purcahse **Aetherial Fixatives** for augmenting Arcanaut's gear.
+You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
+<details>
+<summary>Noteable Gold Items to Buy</summary>
+<div style="display:flex; justify-content: center;">
+| Item | Cost | Use |
+| :---: | :---: | :--: |
+| **Ph. Samurai** |  1,000 | Strongest DPS option in Occult Crescent right now. |
+| **Ph. Geomancer** | 1,000 | Damage Buff/Healing Bells. Can Suspend self/party. Required for Forked Tower | 
+| **Ph. Thief** |  1,000 | Healing, MP refills, and the only way to raise people in Forked Tower. |
+| **Aetherial Fixatives** | 3,000 | Used in augmented Arcanaut's gear from base to the +1 variant. | 
+| **Sanguine Ciphers** |  960 | Used to enter Forked Tower. Costs 960 gold but accumulates fast when farming in a dedicated group. |
+| **Coffers/Potions** | 50 | Items used by Ph. Samurais/Chemists. Alternative to spending gil if no other uses for gold. | 
+</div>
+</details>
+
+### Sanguinite
+Forked Tower: Blood exclusive currency. Earned from completing encounters and finding hidden chests throughout the tower. A max of 30 sanguinite can be potentially earned
+per clear. Sanguinite is mostly used to purchase X-Fixatives which are used in augmenting Arcanaut's gear from +1 to +2.
+
+You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
+
+<details>
+<summary>Noteable Sanguinite Items to Buy</summary>
+<div style="display:flex; justify-content: center;">
+| Item | Cost | Use |
+| :---: | :---: | :--: |
+| **X-Fixatives** | 10 | Used in augmented Arcanaut's gear from +1 to the +2 variant. | 
+| **Psamathe** | 6 | Pink-ish Dead Stars minion | 
+| **Naiad** |  6 | Purple Dead Stars minion |
+| **Deimos** |  6 | Green Dead Stars minion |
+| **Furniture** |  Varied | Housing items unique to Occult Crescent |
+| `/twirl` emote | 30 | Unique emote only found in South Horn | 
+</div>
+</details>
+
+<br></br>
+<hr></hr>
 ## Gold Farming
+Gold farming guide goes here: <a href="https://docs.google.com/document/d/1wlCr6ZTR_lnZhbO_1GmpC6oS9K2gaz2GKNJv8dV3zeI/edit?tab=t.39eab4nqlnk0" target="_blank">read more about gold farming</a>
+
+<br></br>
+<hr></hr>
 ## Critical Engagements
+Critical Engagements, or CEs from here on, are the older sibling to FATEs. These battles are against a much more fierce foe and can sometimes reward new Phantom Jobs, field records, as well as more experience and silver.
+CEs are broken in two kinds, ones that can be spawned by the player and ones that spawn randomly without player input. The rewards are the same regardless of spawn method however.
+
+Every successful Critical Engagement will reward the following
+ - 200-23,400 Knowledge XP (scales to your knowledge level)
+ - 480 Phantom Job XP
+ - 20 uncapped tomestones
+ - 10 weekly capped tomestones
+ - 200 enlightenment silver pieces
+ - 20% for a Demiatma (which demiatma dropping is zone dependent)
+ - Field Notes (specified below)
+### Randomly Spawning CEs
+These CEs will spawn randomly over time. These have a ~120 minute (2 hours) cooldown period before a specific CE can spawn again.
+<div style="display:flex; justify-content: center;">
+| CE | Boss | Noteable Drops |
+| :---: | :---: | :--: |
+| Company of Stone        | Stone Men         | |
+| Cursed Concern          | Trading Tortoise  | Field Notes | 
+| Crawling Death          | Death Claw        | |
+| The Black Regiment      | Black Chocobos    | Ranger Soul Shard |
+| With Extreme Prejudice  | Command Urn       | |
+| The Unbridled           | Crescent Berserker| Berserker Soul Shard |
+| Eternal Watch           | Repaired Lion     | |
+| Trial by Claw           | Crystal Dragon    | |
+</div>
+
+### Player Spawned CEs
+All CEs listed below are spawned by killing a specific mob until it spawns. If it doesn't spawn, keep trying! These have a ~60 minute (1 hour) cooldown period before a specific CE can spawn again.
+<div style="display:flex; justify-content: center;">
+| CE | Boss | Spawn Mob | Mob Location | Noteable Drops |
+| :---: | :---: | :--: | :--: |  :--: |
+| From Times Bygone   | Mythic Idol           | Crescent Byblos     | (X: 5, Y: 25) | Field Notes |
+| Scourge of the Mind | Mysterious Mindflayer | Crescent Monks      | (X: 26, Y: 33) | | 
+| Shark Attack        | Nymian Petalodius     | Crescent Petalodite | (X: 19, Y: 6) | Field Notes | 
+| Noise Complaint     | Neo Garula            | Crescent Garula     | (X: 31, Y: 8) | | 
+| On the Hunt         | Lion Rampant          | Crescent Fans       | (X: 35, Y: 21) | Phantom Oracle Soul Stone | 
+| Calamity Bound      | Cloister Demon        | Crescent Inkstains  | (X: 14, Y: 35) | Story Progression, Field Notes | 
+</div>
+
+<br></br>
+<hr></hr>
 ## FATEs
