Added more stuff on OC, updated some FTB stuff

--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -16,19 +16,35 @@ It features limited raising in both methods and a lives sytems along with more g
 
 ### Required Phantom Jobs
 The list of required phantom jobs is really short. You just need a two time mages, thieves, geomancers, and a single berserker for specific sections. However, there are other jobs that aren't "required" but will definitely make
-your experience magentitudes easier. In no particular order the following phantom jobs are strongly encouraged to be brought.
+your experience much easier. In no particular order the following phantom jobs are strongly encouraged to be brought.
+- **Phantom Time Mage**:
+A required phantom job to complete Forked Tower: Blood. Needed for dispelling specific adds at various points in Forked Tower. Can also slow a majority of adds throughout Forked Tower.
+
+- **Phantom Geomancer**:
+A required phantom job to complete Forked Tower: Blood. Uses Levitate to walk over hazards during Hallways and the Bridges encounter.
+
+- **Phantom Bard**:
+A required phantom job to complete Forked Tower: Blood. Helps increase a party's damage but noteably uses Romeo's Ballad to stun the Tower Idols during the bridges encounter. If left unstunned,
+the Idols will instantly wipe the group.
+
+- **Phantom Berserker**:
+A required phantom job to complete Forked Tower: Blood. Used at Magitaur to kill the purple canister with their Rage ability to avoid being Hysteria'd for 60 seconds.
+
 - **Phantom Chemist**:
-This is your only method of raising outside of Healer Limit Break 3. Progression groups are reccomended to bring multiple of these.
+This is your only method of raising outside of Healer Limit Break 3. Progression groups are reccomended to bring a LOT of these for safety.
 
 - **Phantom Knight**:
 Provides a 10% damage mitigation for 30 minutes when using Pray near the knowledge crystal scattered throughout Forked Tower. Knights are also used to tank bosses, adds, and sometimes clear out
 traps due to their Pledge ability. Noteably knights are great at taking the Marble Dragon "Dread Deluge" buster and the Magitaur Cannister's "Arcane Recoil".
 
-- **Phantom Time Mage**:
-Absolutely required job needed for dispelling specific adds at various points in Forked Tower. Can also slow a large majority of adds throughout Forked Tower.
+- **Phantom Thief**:
+A required phantom job to complete Forked Tower: Blood. Percepts hidden traps and opens locked/hidden passages to help the group earn more Sanguinite.
 
-- **Phantom Geomancer**:
-A required phantom job to complete Forked Tower: Blood.
+- **Phantom Ranger**:
+Can safely detonate/pop traps (hidden or visible) with Occult Falcon. Commonly used to pop the unstable/mega traps hidden throughout, especially on Bridges, so players can safely move around.
+
+- **Phantom Cannoneer**:
+Free damage increase to the entire raid's damage through Silver Cannon.
 
 ### Limited Raising and Lives
 While in Forked Tower: Blood you a Resurrection Restricted debuff will be placed on participants. This debuff starts at three stacks and act as your "lives" while inside the Forked Tower.
@@ -42,7 +58,7 @@ With that, the methods in which you can be raised are also extremely limited. So
 1. Phantom Chemist with the Raise ability (unlocked at level 3)
 2. Healer Limit Break 3.
 
-Both methods will consume 1 life and the healer limit break 3 *does not* circumvent the resurrection denied buff.
+Both methods will consume 1 life and the healer limit break 3 does *__not__* circumvent the resurrection denied status.
 
 <br></br>
 <hr></hr>
@@ -75,7 +91,7 @@ For a list of phantom jobs to focus, please consult the image below.
 All guides linked below will feature the same strats, just with a different presentation and/or slightly different explainations. Both will result in the same outcomes when resolved.
 These strats are all used by the featured N.A. Discords linked [here](/others/discords)
 
-## General Encounter Resources
+### General Encounter Resources
 - <a href="https://docs.google.com/spreadsheets/d/1Nb4pnAjHg06r7zR3bJEUaZ7gwcX4nue0YIuybVdvpVk" target="_blank">**Fight Timelines**</a>
 - <a href="https://docs.google.com/spreadsheets/d/1UlbGYBrhVn4L1isfcVACOqLlYclHeP9Zazj6PfM3Y8U" target="_blank">**Tank Mitigation**</a> (includes pKnight, Non-pKnight, Berserker)
 - <a href="https://docs.google.com/spreadsheets/d/1wHcHBrO41f7BNaJmRCqxGwdv9bldhb-4m2YfcVWWzbM" target="_blank">**Healer Mitigation**</a> (include pBard timings)
