--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -10,7 +10,8 @@ import { Icon } from '@astrojs/starlight/components';
 import { Image } from 'astro:assets';
 import Footer from '@components/Footer.astro'
 
-## South Horn
+This is the first zone of the Occult Crescent released in patch 7.25 and contains many FATEs, Critical Engagements, and the Forked Tower: Blood. This zone also contains the first half of the
+story and is not gated by completing the Forked Tower: Blood. 
 
 <br></br>
 <hr></hr>
@@ -121,14 +122,14 @@ These CEs will spawn randomly over time. These have a ~120 minute (2 hours) cool
 <div style="display:flex; justify-content: center;">
 | CE | Boss | Noteable Drops |
 | :---: | :---: | :--: |
-| Company of Stone        | Stone Men         | |
+| Company of Stone        | Stone Men         | n/a |
 | Cursed Concern          | Trading Tortoise  | Field Notes | 
-| Crawling Death          | Death Claw        | |
+| Crawling Death          | Death Claw        | n/a |
 | The Black Regiment      | Black Chocobos    | Ranger Soul Shard |
-| With Extreme Prejudice  | Command Urn       | |
+| With Extreme Prejudice  | Command Urn       | n/a |
 | The Unbridled           | Crescent Berserker| Berserker Soul Shard |
-| Eternal Watch           | Repaired Lion     | |
-| Trial by Claw           | Crystal Dragon    | |
+| Eternal Watch           | Repaired Lion     | n/a |
+| Trial by Claw           | Crystal Dragon    | n/a |
 </div>
 
 ### Player Spawned CEs
@@ -137,9 +138,9 @@ All CEs listed below are spawned by killing a specific mob until it spawns. If i
 | CE | Boss | Spawn Mob | Mob Location | Noteable Drops |
 | :---: | :---: | :--: | :--: |  :--: |
 | From Times Bygone   | Mythic Idol           | Crescent Byblos     | (X: 5, Y: 25) | Field Notes |
-| Scourge of the Mind | Mysterious Mindflayer | Crescent Monks      | (X: 26, Y: 33) | | 
+| Scourge of the Mind | Mysterious Mindflayer | Crescent Monks      | (X: 26, Y: 33) | n/a | 
 | Shark Attack        | Nymian Petalodius     | Crescent Petalodite | (X: 19, Y: 6) | Field Notes | 
-| Noise Complaint     | Neo Garula            | Crescent Garula     | (X: 31, Y: 8) | | 
+| Noise Complaint     | Neo Garula            | Crescent Garula     | (X: 31, Y: 8) | n/a | 
 | On the Hunt         | Lion Rampant          | Crescent Fans       | (X: 35, Y: 21) | Phantom Oracle Soul Stone | 
 | Calamity Bound      | Cloister Demon        | Crescent Inkstains  | (X: 14, Y: 35) | Story Progression, Field Notes | 
 </div>
@@ -147,3 +148,30 @@ All CEs listed below are spawned by killing a specific mob until it spawns. If i
 <br></br>
 <hr></hr>
 ## FATEs
+These are just like FATEs in the overworld. Just show up, do the required objective, and move on. 
+These are much smaller in scale compared to the critical engagement counterpart and often only take a fraction of the time to complete. 
+There are no knowledge level or phantom job level requires to participate in any FATEs around Occult Crescent. Just show up and fight!
+
+Every successful FATE you complete with a **gold** rating will reward the following
+- 40-4,680 Knowledge XP (scales to your knowledge level)
+- 80 Phantom Job XP
+- 30 enlightenment silver pieces
+- 5% chance for a Demiatma (which demiatma dropping is zone dependent)
+
+<div style="display:flex; justify-content: center;">
+| FATE | Location | Noteable Drops |
+| :---: | :---: | :--: |
+| A Delicate Balance    | (X: 14, Y: 34) | | 
+| A Prying Eye          | (X: 20, Y: 32) |
+| An Uending Duty       | (X: 17, Y: 22) |
+| Brain Drain           | (X: 20, Y: 15) |
+| Fatal Allure          | (X: 22, Y: 27) |
+| King of the Crescent  | (X: 17, Y: 26) | 
+| Rough Waters          | (X: 24, Y: 34) | 
+| Serving Darkness      | (X: 29, Y: 21) |
+| Sworn to Soil         | (X: 9, Y:  27) |
+| The Golden Gaurdian   | (X: 28, Y: 31) | 
+| The Winged Terror     | (X: 10, Y:  9) |
+| Pleading Pots         | (X: 25, Y: 17) | Field Notes |
+| Persistent Pots       | (X: 11, Y: 32) | Field Notes |
+</div>
